# kelly-portfolio-lab

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  pyproject.toml
assets/: metrics.md
docs/superpowers/plans/: 2026-06-10-kelly-portfolio-lab.md
docs/superpowers/specs/: 2026-06-10-kelly-portfolio-lab-design.md
notebooks/: kelly_story.ipynb
scripts/: make_charts.py
src/kellyfolio/: __main__.py  backtest.py  data.py  estimate.py  kelly.py  report.py
tests/: test_backtest.py  test_data.py  test_estimate.py  test_kelly.py  test_report.py
