[project]
name = "kellyfolio"
version = "0.1.0"
description = "Fractional-Kelly ETF portfolio allocator and walk-forward backtester"
requires-python = ">=3.11"
dependencies = ["numpy", "pandas", "yfinance", "matplotlib", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
